[refs #84441] Fix spacing for Data and statistics template.

--- a/src/eni/seis/theme/theme-south/css/main.css
+++ b/src/eni/seis/theme/theme-south/css/main.css
@@ -4063,6 +4063,9 @@ ul.configlets {
 .section-frontpage-countries p a:hover {
   color: #ff6b01;
 }
+body.template-data_and_statistics .page-main {
+  width: 100%;
+}
 body.template-data_and_statistics #parent-fieldname-description {
   text-align: left;
   padding-left: 15px;
