--- a/src/eni/seis/theme/theme-south/src/less/pages/data_and_statistics.less
+++ b/src/eni/seis/theme/theme-south/src/less/pages/data_and_statistics.less
@@ -1,4 +1,8 @@
 body.template-data_and_statistics {
+  .page-main {
+      width: 100%;
+  }
+
   #parent-fieldname-description {
     text-align: left;
     padding-left: 15px;
